--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
+    <!-- PWA Meta Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Bucket Game">
+    <meta name="theme-color" content="#87CEEB">
+    <meta name="description" content="Fun animal throwing game for kids">
+
+    <!-- Prevent phone number detection -->
+    <meta name="format-detection" content="telephone=no">
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Icons -->
+    <link rel="apple-touch-icon" href="images/icons/icon.svg">
+    <link rel="icon" type="image/svg+xml" href="images/icons/icon.svg">
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/styles.css">
+
+    <title>Animal Bucket Game</title>
+</head>
+<body>
+    <!-- Start Screen -->
+    <div id="start-screen">
+        <h1>Animal Bucket Game</h1>
+        <p>Throw the animals into the bucket!</p>
+        <button id="start-button">Tap to Start</button>
+    </div>
+
+    <!-- Game Container -->
+    <div id="game-container" class="hidden">
+        <!-- Animal Pile Area (left side) -->
+        <div id="animal-pile"></div>
+
+        <!-- Play Area (middle) -->
+        <div id="play-area">
+            <!-- Current animal being dragged will appear here -->
+        </div>
+
+        <!-- Bucket Area (right side) -->
+        <div id="bucket-area">
+            <div id="bucket">
+                <svg viewBox="0 0 200 180" class="bucket-svg">
+                    <!-- Bucket handle -->
+                    <path d="M30,40 Q100,0 170,40" stroke="#666" stroke-width="8" fill="none" stroke-linecap="round"/>
+                    <!-- Bucket body -->
+                    <path d="M25,50 L45,160 L155,160 L175,50" fill="#8B4513"/>
+                    <!-- Bucket front -->
+                    <path d="M25,50 L45,160 L155,160 L175,50" fill="#A0522D"/>
+                    <!-- Bucket rim -->
+                    <ellipse cx="100" cy="50" rx="78" ry="20" fill="#CD853F"/>
+                    <!-- Bucket inner shadow -->
+                    <ellipse cx="100" cy="55" rx="65" ry="15" fill="#6B3510"/>
+                </svg>
+            </div>
+        </div>
+
+        <!-- Score/Progress indicator -->
+        <div id="progress">
+            <span id="animals-remaining">12</span> animals left
+        </div>
+    </div>
+
+    <!-- Celebration Overlay -->
+    <div id="celebration" class="hidden">
+        <canvas id="confetti-canvas"></canvas>
+        <div id="celebration-content">
+            <h1 id="congrats-text">Congratulations!</h1>
+            <button id="play-again-button">Play Again</button>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="js/audio.js"></script>
+    <script src="js/touch.js"></script>
+    <script src="js/animations.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/app.js"></script>
+</body>
+</html>
