--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
         </div>
     </div>
 
+    <!-- Animal Display (shown briefly when animal lands in bucket) -->
+    <div id="animal-display" class="hidden">
+        <img src="" alt="">
+        <div class="animal-name-text"></div>
+    </div>
+
     <!-- Celebration Overlay -->
     <div id="celebration" class="hidden">
         <canvas id="confetti-canvas"></canvas>
