multiple ui changes

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         <div id="progress">
             <span id="animals-remaining">12</span> animals left
         </div>
+
+        <!-- Start Over Button -->
+        <button id="start-over-button">Start Over</button>
     </div>
 
     <!-- Animal Display (shown briefly when animal lands in bucket) -->
