Add back-to-hub button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
     <!-- Game Container -->
     <div id="game-container" class="hidden">
+        <!-- Back to Hub -->
+        <a id="back-to-hub" href="https://www.gordongamehub.com" aria-label="Back to Gordon Game Hub" title="Back to Gordon Game Hub">← Hub</a>
+
         <!-- Animal Pile Area (left side) -->
         <div id="animal-pile"></div>
 
