--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Game Container -->
     <div id="game-container" class="hidden">
         <!-- Back to Hub -->
-        <a id="back-to-hub" href="https://www.gordongamehub.com" aria-label="Back to Gordon Game Hub" title="Back to Gordon Game Hub">← Hub</a>
+        <a id="back-to-hub" href="https://www.gordongamehub.com" aria-label="Go back to Gordon Game Hub" title="Go back to Gordon Game Hub">Go Back</a>
 
         <!-- Animal Pile Area (left side) -->
         <div id="animal-pile"></div>
